Add facets (numberOfPages)